@@ -1,3 +1,15 @@
+2002-08-08  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tests/fCmd.test:
+	* tests/unixFCmd.test: updated tests for new link copy behavior.
+	* generic/tclFCmd.c (CopyRenameOneFile): changed the behavior to
+	follow links to endpoints and copy that file/directory instead of
+	just copying the surface link.  This means that trying to copy a
+	link that has no endpoint (danling link) is an error.
+	[Patch #591647] (darley)
+
+	* tests/README: slight wording improvements
+
 2002-08-07  Miguel Sofer  <msofer@users.sourceforge.net>
 
 	* docs/BoolObj.3: added description of valid string reps for a
